[package]
name = "kafka"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde_json = "1.0.108"
serde = { version = "1.0.189", features = ["derive"] }
